syntax = "proto3";

package main;

import "services/ping.proto";
import "services/file.proto";
import "services/presence.proto";
import "services/exec.proto";
import "services/package.proto";
import "services/networking.proto";
import "services/runtime.proto";

service SystemService {
    rpc Ping(ping.PingRequest) returns (ping.PongResponse);
    rpc FileOperation(file.FileRequest) returns (file.FileResponse);
    rpc PresenceUpdate(presence.PresenceRequest) returns (presence.PresenceResponse);
    rpc ExecuteCommand(exec.ExecRequest) returns (exec.ExecResponse);
    rpc ManagePackage(package.PackageRequest) returns (package.PackageResponse);
    rpc ManageNetwork(networking.NetworkRequest) returns (networking.NetworkResponse);
    rpc RuntimeIO(runtime.RuntimeRequest) returns (runtime.RuntimeResponse);
}
